<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".AboutUs">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/storeImage"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/pict_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="30dp"
            android:contentDescription="@string/store_img"/>

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/cream"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:typeface="serif"
            app:layout_constraintTop_toBottomOf="@id/storeImage"/>

        <TextView
            android:id="@+id/aboutUsSentence"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/aboutus_sentence"
            app:layout_constraintTop_toBottomOf="@id/appName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="20dp"
            style="@style/aboutUs_1"/>

        <LinearLayout
            android:id="@+id/show_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/aboutUsSentence"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:weightSum="2" >

            <LinearLayout
                android:id="@+id/show_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textMusic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/music"
                    style="@style/show"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/performance"
                    style="@style/performance"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/show_dance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textDance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/dance"
                    style="@style/show"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/performance"
                    style="@style/performance"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/show_row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/show_row1"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:weightSum="2" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textOpera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/opera"
                    style="@style/show"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/performance"
                    style="@style/performance"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textTheatre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/theatre"
                    style="@style/show"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/performance"
                    style="@style/performance"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/aboutUsSentence2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/aboutus_sentence_2"
            app:layout_constraintTop_toBottomOf="@id/show_row2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="30dp"
            style="@style/aboutUs_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/aboutUsSentence2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/cc"
            style="@style/performance"
            android:textSize="14sp"
            android:paddingVertical="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>